<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/beige"
    tools:context=".Food">

    <include
        android:id="@+id/include5"
        layout="@layout/top_bar"
        tools:layout_editor_absoluteX="2dp" />

    <include
        android:id="@+id/include3"
        layout="@layout/nav_bar"
        tools:layout_editor_absoluteY="680dp" />


    <FrameLayout
        style="@style/scroll_view_style2"
        android:layout_width="350dp"
        android:layout_height="600dp"
        android:background="@drawable/rounded_all_corner_background"
        app:layout_constraintBottom_toTopOf="@+id/include3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include5">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:padding="10dp"
            android:paddingBottom="100dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                app:srcCompat="@drawable/sample_image" />

            <TextView
                style="@style/heading_style"
                android:layout_width="258dp"
                android:layout_height="wrap_content"
                android:text="@string/sampleName"
                android:textAlignment="center"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="330dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingLeft="20dp"
                android:paddingRight="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="15dp"
                    android:text="@string/sample_servings" />

                <ImageButton
                    android:id="@+id/imageButton"
                    android:layout_width="wrap_content"
                    android:layout_height="38dp"
                    android:layout_marginLeft="170dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_corners"
                    app:srcCompat="@drawable/heart_fav" />

            </LinearLayout>

            <TextView
                style="@style/food_recipe_sub_topic"
                android:layout_marginTop="0dp"
                android:text="Ingredients" />

            <TextView
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:lineSpacingExtra="14sp"
                android:text="@string/sampleInIngredients"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                style="@style/food_recipe_sub_topic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/addRecipeInput5"
                android:textAlignment="center" />

            <TextView
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginBottom="20dp"
                android:justificationMode="inter_word"
                android:text="@string/sampleMethod" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center_horizontal">

                <Button
                    style="@style/button_style_1"
                    android:text="Edit"
                    android:onClick="opedEditFood"/>

                <Button
                    style="@style/button_style_1"
                    android:layout_marginLeft="20dp"
                    android:text="Delete" />


            </LinearLayout>


        </LinearLayout>

    </ScrollView>
</FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>