<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/beige"
    tools:context=".Signup">


    <TextView
        android:id="@+id/app_name"
        android:layout_width="185dp"
        android:layout_height="74dp"
        android:fontFamily="@font/bangers"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/brown"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.062" />

    <TextView
        android:id="@+id/textView3"
        style="@style/heading_style"
        android:layout_width="106dp"
        android:layout_height="37dp"
        android:text="Sign Up"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.432"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.229" />

    <FrameLayout
        android:id="@+id/frameLayout"
        style="@style/scroll_view_style2"
        android:layout_width="381dp"
        android:layout_height="228dp"
        android:layout_margin="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="348dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textField1"
                style="@style/from_text_style"
                android:layout_width="match_parent"
                android:hint="@string/profileInput1">

                <include layout="@layout/form_field" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textField2"
                style="@style/from_text_style"
                android:layout_width="match_parent"

                android:hint="@string/profileInput2">

                <include layout="@layout/form_field" />
            </com.google.android.material.textfield.TextInputLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center_horizontal">

                <Button
                    style="@style/button_style_1"
                    android:text="Signup"
                    android:onClick="openDashboard"/>

            </LinearLayout>

        </LinearLayout>


    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>