<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/beige"
    tools:context=".Dashboard">


    <include layout="@layout/top_bar" />
    <include layout="@layout/search_bar" />
    <include layout="@layout/nav_bar" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_height="580dp"
        app:layout_constraintBottom_toTopOf="@+id/nav_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchBar"
        app:layout_constraintVertical_bias="1.0"
        style="@style/scroll_view_style1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="10dp"
            android:paddingBottom="40dp"
            android:textAlignment="center">

            <TextView
                android:id="@+id/category"
                style="@style/heading_style"
                android:text="@string/dashBoardScrollViewName" />

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:rowCount="3"
                android:columnCount="2"
                android:layout_margin="10dp">

                <androidx.cardview.widget.CardView
                    android:layout_width="150dp"
                    android:layout_height="200dp"
                    android:layout_row="0"
                    android:layout_column="0"
                    android:layout_margin="10dp"
                    android:clickable="true"
                    app:cardCornerRadius="15dp"
                    app:cardElevation="12dp"
                    android:onClick="openDesserts">

                    <LinearLayout
                        android:layout_width="140dp"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView
                            android:id="@+id/imageView1"
                            android:layout_width="150dp"
                            android:layout_height="170dp"
                            app:srcCompat="@drawable/dessert" />

                        <TextView
                            style="@style/food_card_name_style"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/Category2" />

                    </LinearLayout>


                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="150dp"
                    android:layout_height="200dp"
                    android:layout_row="0"
                    android:layout_column="1"
                    android:layout_margin="10dp"
                    android:clickable="true"
                    app:cardCornerRadius="15dp"
                    app:cardElevation="12dp">

                    <LinearLayout
                        android:layout_width="139dp"
                        android:layout_height="198dp"
                        android:orientation="vertical"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView
                            android:id="@+id/imageView2"
                            android:layout_width="150dp"
                            android:layout_height="161dp"
                            android:layout_marginLeft="0dp"
                            app:srcCompat="@drawable/main_dish" />

                        <TextView
                            style="@style/food_card_name_style"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/Category1" />

                    </LinearLayout>


                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="150dp"
                    android:layout_height="200dp"
                    android:layout_row="1"
                    android:layout_column="0"
                    android:layout_margin="10dp"
                    android:clickable="true"
                    app:cardCornerRadius="15dp"
                    app:cardElevation="12dp">

                    <LinearLayout
                        android:layout_width="140dp"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView
                            android:id="@+id/imageView3"
                            android:layout_width="150dp"
                            android:layout_height="170dp"
                            app:srcCompat="@drawable/drinks" />

                        <TextView
                            style="@style/food_card_name_style"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/Category3" />

                    </LinearLayout>


                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="150dp"
                    android:layout_height="200dp"
                    android:layout_row="1"
                    android:layout_column="1"
                    android:layout_margin="10dp"
                    android:clickable="true"
                    app:cardCornerRadius="15dp"
                    app:cardElevation="12dp">

                    <LinearLayout
                        android:layout_width="140dp"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView
                            android:id="@+id/imageView4"
                            android:layout_width="150dp"
                            android:layout_height="168dp"
                            app:srcCompat="@drawable/meat" />

                        <TextView
                            style="@style/food_card_name_style"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"

                            android:text="@string/Category4" />

                    </LinearLayout>


                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="150dp"
                    android:layout_height="200dp"
                    android:layout_row="2"
                    android:layout_column="0"
                    android:layout_margin="10dp"
                    android:clickable="true"
                    app:cardCornerRadius="15dp"
                    app:cardElevation="12dp">

                    <LinearLayout
                        android:layout_width="140dp"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        tools:ignore="UseCompoundDrawables">

                        <ImageView
                            android:id="@+id/imageView"
                            android:layout_width="150dp"
                            android:layout_height="173dp"
                            app:srcCompat="@drawable/dessert" />

                        <TextView
                            style="@style/food_card_name_style"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/Category2" />

                    </LinearLayout>


                </androidx.cardview.widget.CardView>


            </GridLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>